--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -214,7 +214,7 @@ bayproj:
 offset:
     <<: *DEFAULT
     name: offset
-    id: 7
+    id: 8
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -233,6 +233,7 @@ offset:
         sigma_decay_step: 100000
         sigma_decay_rate: 0.8
         offset_save_interval: 1000
+        dense_offset: true
     config:
         store_map: false
     model:
