--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -214,7 +214,7 @@ bayproj:
 offset:
     <<: *DEFAULT
     name: offset
-    id: 8
+    id: 9
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -234,6 +234,7 @@ offset:
         sigma_decay_rate: 0.8
         offset_save_interval: 1000
         dense_offset: true
+        dconv_for_LO_stride: [3, 3, 3, null]
     config:
         store_map: false
     model:
