--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -214,7 +214,7 @@ bayproj:
 offset:
     <<: *DEFAULT
     name: offset
-    id: 9
+    id: 10
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -233,8 +233,8 @@ offset:
         sigma_decay_step: 100000
         sigma_decay_rate: 0.8
         offset_save_interval: 1000
-        dense_offset: true
-        dconv_for_LO_stride: [3, 3, 3, null]
+        free_chan_per_pos: [8, 16, 32, null]
+        dconv_for_LO_stride: [1, 1, 1, null]
     config:
         store_map: false
     model:
