--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -214,7 +214,7 @@ bayproj:
 offset:
     <<: *DEFAULT
     name: offset
-    id: 12
+    id: 13
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -256,7 +256,7 @@ offset:
             disable_displace: false
             random_offset: 0
             use_origin: true
-            early_predictor: false
+            early_predictor: true
             loss_invisible: false
     dataset:
         mean_std_file: mean_std.pth
