--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -214,7 +214,7 @@ bayproj:
 offset:
     <<: *DEFAULT
     name: offset
-    id: 18
+    id: 20
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -257,7 +257,7 @@ offset:
             random_offset: 0
             use_origin: true
             early_predictor: true
-            loss_invisible: false
+            loss_invisible: true
     dataset:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
