--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -214,7 +214,7 @@ bayproj:
 offset:
     <<: *DEFAULT
     name: offset
-    id: 23
+    id: 24
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -252,7 +252,7 @@ offset:
             displace_stride: [3, 3, 3, null]
             displace_size: [[9, 9], [7, 7], [5, 5], null]
             actual_stride: [3, 3, 3, null]
-            displace_learnable_offset: false
+            displace_learnable_offset: true
             disable_displace: false
             random_offset_init: 0
             use_origin: true
