--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -349,11 +349,11 @@ fulloffset:
         lr_gamma: 0.1
         lr_decay_step: 460000 # 70 * 6543
         momentum: 0.0
-        interpolate_kernel_type: bilinear
+        interpolate_kernel_type: gaussian
         interpolate_gaussian_sigma: 0.5
         move_average_cycle: 500
-        interpolate_gaussian_sigma_decay_step: 100000
-        interpolate_gaussian_sigma_decay_rate: 0.8
+        interpolate_gaussian_sigma_decay_step: 330000
+        interpolate_gaussian_sigma_decay_rate: 0.66
         offset_save_interval: 1000
         bind_chan: 1
         half_reversed_offset: false
