[Exp] offset_34/Oct12_21-15-13:
- Fix a bug in bilinear interpolation
- Switch to biliner interpolation LO

--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 33
+    id: 34
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -349,7 +349,7 @@ fulloffset:
         lr_gamma: 0.1
         lr_decay_step: 460000 # 70 * 6543
         momentum: 0.0
-        interpolate_kernel_type: gaussian
+        interpolate_kernel_type: bilinear
         interpolate_gaussian_sigma: 0.5
         move_average_cycle: 500
         interpolate_gaussian_sigma_decay_step: 330000
