--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 52
+    id: 53
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -355,7 +355,7 @@ fulloffset:
         interpolate_gaussian_sigma_decay_step: 330000
         interpolate_gaussian_sigma_decay_rate: 0.66
         offset_save_interval: 1000
-        expand_chan_ratio: [2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0.5, 0.5]
+        expand_chan_ratio: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
@@ -373,6 +373,7 @@ fulloffset:
         resnet: 50
         detail:
             early_predictor_label_index: [2, 1, 0]
+            disable_displace: true
             displace_learnable_offset: true
             random_offset_init: 0
             early_predictor: true
