[Exp] offset_54/Oct20_22-48-40:
- Fix set_learnable_offset_lr not setting lr when step_offset==0
- Fix bias_factor may cause bias_shape be fractional (taking floor)
- Add OffsetBlock with 256 offsets before upsampler of each predictor

--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -15,6 +15,7 @@ default: &DEFAULT
     no_criterion_load: false
     no_optimizer_load: false
     store: false
+    check: false
 
 profile: &PROFILE
     <<: *DEFAULT
@@ -38,6 +39,7 @@ fast: &FAST
     workers: 0
     fast_pass_train: 1
     fast_pass_valid: 1
+    check: true
 
 fastresume:
     <<: *FAST
@@ -59,3 +61,4 @@ fasteval:
     fast_pass_valid: 3
     resume: 'checkpoint/{exp}/{id}'
     evaluate: true
+    check: true
