--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,11 +336,11 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 57
+    id: 58
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
-    schedule: []
+    schedule: [25, 30, 35, 40]
     train_batch: 16
     test_batch: 16
     learnable_offset:
@@ -355,7 +355,7 @@ fulloffset:
         interpolate_gaussian_sigma_decay_step: 330000
         interpolate_gaussian_sigma_decay_rate: 0.66
         offset_save_interval: 1000
-        expand_chan_ratio: [1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]
+        expand_chan_ratio: [2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0.5, 0.5]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
