--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 59
+    id: 60
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -355,12 +355,12 @@ fulloffset:
         interpolate_gaussian_sigma_decay_step: 330000
         interpolate_gaussian_sigma_decay_rate: 0.66
         offset_save_interval: 1000
-        expand_chan_ratio: [2, 2, 1, 1, 1, 1, 1, 1, 0.5]
+        expand_chan_ratio: [2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0.5, 0.5]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
         dconv_for_LO_stride: 1
-        regress_offset: false
+        regress_offset: true
         grad_inside_only: true
         use_in_predictor: false
     config:
