--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 60
+    id: 61
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -346,6 +346,7 @@ fulloffset:
     learnable_offset:
         train_min_step: 6543
         lr: 1.e-3
+        lr_regressor: 1.e-4
         lr_gamma: 0.1
         lr_decay_step: 200000 # 15 * 6543
         momentum: 0.0
