--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 63
+    id: 64
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -345,10 +345,10 @@ fulloffset:
     test_batch: 16
     learnable_offset:
         train_min_step: 6543
-        lr: 5.e-4
-        lr_regressor: 5.e-4
+        lr: 1.e-3
+        lr_regressor: 1.e-3
         lr_gamma: 0.1
-        lr_decay_step: 200000 # 15 * 6543
+        lr_decay_step: 100000 # 15 * 6543
         momentum: 0.0
         interpolate_kernel_type: bilinear
         interpolate_gaussian_sigma: 0.5
@@ -361,7 +361,7 @@ fulloffset:
         reuse_offset: false
         half_reversed_offset: false
         dconv_for_LO_stride: 1
-        regress_offset: true
+        regress_offset: false
         grad_inside_only: true
         use_in_predictor: false
     config:
