--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 69
+    id: 70
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -370,11 +370,11 @@ fulloffset:
         resnet_pretrained: pretrained/resnet50_gn.pth
         inp_shape: [192, 256] # W, H
         out_shape: [48, 64] # W, H
-        gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+        gaussian_kernels: [2.6, 2., 1.7, 1.4, 2.3, 2.9] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
         resnet: 50
         detail:
-            early_predictor_label_index: [2, 1, 0]
+            early_predictor_label_index: [1, 4, 5]
             disable_displace: false
             displace_learnable_offset: true
             random_offset_init: 0
