--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 70
+    id: 71
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -344,11 +344,11 @@ fulloffset:
     train_batch: 16
     test_batch: 16
     learnable_offset:
-        train_min_step: 6543
-        lr: 1.e-3
-        lr_regressor: 1.e-3
-        lr_gamma: 0.1
-        lr_decay_step: 100000 # 15 * 6543
+        train_min_step: 0
+        lr: 5.e-4
+        lr_regressor: 5.e-4
+        lr_gamma: 0.5
+        lr_decay_step: 300000 # 15 * 6543
         momentum: 0.0
         interpolate_kernel_type: bilinear
         interpolate_gaussian_sigma: 0.5
@@ -356,7 +356,7 @@ fulloffset:
         interpolate_gaussian_sigma_decay_step: 330000
         interpolate_gaussian_sigma_decay_rate: 0.66
         offset_save_interval: 1000
-        expand_chan_ratio: [4, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0.5]
+        expand_chan_ratio: [2, 2, 2, 2, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
@@ -367,14 +367,14 @@ fulloffset:
     config:
         store_map: false
     model:
-        resnet_pretrained: pretrained/resnet50_gn.pth
+        resnet_pretrained: null
         inp_shape: [192, 256] # W, H
         out_shape: [48, 64] # W, H
-        gaussian_kernels: [2.6, 2., 1.7, 1.4, 2.3, 2.9] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+        gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
         resnet: 50
         detail:
-            early_predictor_label_index: [1, 4, 5]
+            early_predictor_label_index: [2, 1, 0]
             disable_displace: false
             displace_learnable_offset: true
             random_offset_init: 0
