--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 72
+    id: 73
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -375,7 +375,7 @@ fulloffset:
         resnet: 50
         detail:
             early_predictor_label_index: [3, 2, 1]
-            disable_displace: false
+            disable_displace: true
             displace_learnable_offset: true
             random_offset_init: 0
             early_predictor: true
