--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 74
+    id: 75
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -364,6 +364,8 @@ fulloffset:
         regress_offset: false
         grad_inside_only: true
         use_in_predictor: false
+        enable_atten: false
+        enable_mask: true
     config:
         store_map: false
     model:
@@ -375,12 +377,12 @@ fulloffset:
         resnet: 50
         detail:
             early_predictor_label_index: [3, 2, 1]
-            disable_displace: true
+            disable_displace: false
             displace_learnable_offset: true
             random_offset_init: 0
             early_predictor: true
             loss_invisible: true
-            enable_offset_block: false
+            enable_offset_block: true
     dataset:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
