--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 75
+    id: 77
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -364,8 +364,8 @@ fulloffset:
         regress_offset: false
         grad_inside_only: true
         use_in_predictor: false
-        enable_atten: false
-        enable_mask: true
+        enable_atten: true
+        enable_mask: false
     config:
         store_map: false
     model:
