--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 79
+    id: 80
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -344,7 +344,7 @@ fulloffset:
     train_batch: 16
     test_batch: 16
     learnable_offset:
-        train_min_step: 6543
+        train_min_step: 0
         lr: 1.e-3
         lr_regressor: 1.e-3
         lr_gamma: 0.3
@@ -356,7 +356,7 @@ fulloffset:
         interpolate_gaussian_sigma_decay_step: 330000
         interpolate_gaussian_sigma_decay_rate: 0.66
         offset_save_interval: 1000
-        expand_chan_ratio: [4, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0.5]
+        expand_chan_ratio: [4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
@@ -369,7 +369,7 @@ fulloffset:
     config:
         store_map: false
     model:
-        resnet_pretrained: pretrained/resnet50_gn.pth
+        resnet_pretrained: null
         inp_shape: [192, 256] # W, H
         out_shape: [48, 64] # W, H
         gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
