--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 80
+    id: 81
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -344,7 +344,7 @@ fulloffset:
     train_batch: 16
     test_batch: 16
     learnable_offset:
-        train_min_step: 0
+        train_min_step: 6543
         lr: 1.e-3
         lr_regressor: 1.e-3
         lr_gamma: 0.3
@@ -356,7 +356,7 @@ fulloffset:
         interpolate_gaussian_sigma_decay_step: 330000
         interpolate_gaussian_sigma_decay_rate: 0.66
         offset_save_interval: 1000
-        expand_chan_ratio: [4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4]
+        expand_chan_ratio: [4, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0.5]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
@@ -382,7 +382,7 @@ fulloffset:
             random_offset_init: 0
             early_predictor: true
             loss_invisible: true
-            enable_offset_block: true
+            enable_offset_block: false
     dataset:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
