--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,13 +336,13 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 81
+    id: 82
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
     schedule: []
-    train_batch: 16
-    test_batch: 16
+    train_batch: 32
+    test_batch: 32
     learnable_offset:
         train_min_step: 6543
         lr: 1.e-3
@@ -356,7 +356,7 @@ fulloffset:
         interpolate_gaussian_sigma_decay_step: 330000
         interpolate_gaussian_sigma_decay_rate: 0.66
         offset_save_interval: 1000
-        expand_chan_ratio: [4, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0.5]
+        expand_chan_ratio: [4, 2, 2, 1, 1]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
@@ -369,12 +369,13 @@ fulloffset:
     config:
         store_map: false
     model:
-        resnet_pretrained: null
+        use_gn: false
+        resnet_pretrained: pretrained/resnet18_bn.pth
         inp_shape: [192, 256] # W, H
         out_shape: [48, 64] # W, H
         gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
-        resnet: 50
+        resnet: 18
         detail:
             early_predictor_label_index: [3, 2, 1]
             disable_displace: false
@@ -382,7 +383,7 @@ fulloffset:
             random_offset_init: 0
             early_predictor: true
             loss_invisible: true
-            enable_offset_block: false
+            enable_offset_block: true
     dataset:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
