--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,19 +336,20 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 82
+    id: 83
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
     schedule: []
-    train_batch: 32
-    test_batch: 32
+    train_batch: 16
+    test_batch: 16
     learnable_offset:
         train_min_step: 6543
         lr: 1.e-3
         lr_regressor: 1.e-3
         lr_gamma: 0.3
         lr_decay_step: 100000 # 15 * 6543
+        bn_momentum: 0.2
         momentum: 0.0
         interpolate_kernel_type: bilinear
         interpolate_gaussian_sigma: 0.5
@@ -356,7 +357,7 @@ fulloffset:
         interpolate_gaussian_sigma_decay_step: 330000
         interpolate_gaussian_sigma_decay_rate: 0.66
         offset_save_interval: 1000
-        expand_chan_ratio: [4, 2, 2, 1, 1]
+        expand_chan_ratio: [4, 2, 2, 2, 1, 1, 1, 1, 1, 1, 1, 1, 0.5]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
@@ -369,13 +370,13 @@ fulloffset:
     config:
         store_map: false
     model:
-        use_gn: false
-        resnet_pretrained: pretrained/resnet18_bn.pth
-        inp_shape: [192, 256] # W, H
-        out_shape: [48, 64] # W, H
-        gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+        use_gn: true
+        resnet_pretrained: pretrained/resnet50_gn.pth
+        inp_shape: [288, 384] # W, H
+        out_shape: [72, 96] # W, H
+        gaussian_kernels: [3.8, 2.9, 2.3, 1.7] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
-        resnet: 18
+        resnet: 50
         detail:
             early_predictor_label_index: [3, 2, 1]
             disable_displace: false
