--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,13 +336,13 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 85
+    id: 86
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
     schedule: []
-    train_batch: 11
-    test_batch: 11
+    train_batch: 16
+    test_batch: 16
     learnable_offset:
         train_min_step: 6543
         lr: 1.e-3
@@ -372,9 +372,9 @@ fulloffset:
     model:
         use_gn: true
         resnet_pretrained: pretrained/resnet50_gn.pth
-        inp_shape: [288, 384] # W, H
-        out_shape: [72, 96] # W, H
-        gaussian_kernels: [3.8, 2.9, 2.3, 1.7] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+        inp_shape: [192, 256] # W, H
+        out_shape: [48, 64] # W, H
+        gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
         resnet: 50
         detail:
