--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -383,7 +383,8 @@ fulloffset:
             displace_learnable_offset: true
             random_offset_init: 0
             early_predictor: false
-            loss_invisible: true
+            loss_early: labeled
+            loss_final: labeled
             enable_offset_block: true
     dataset:
         data: coco
