--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 90
+    id: 91
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -383,11 +383,11 @@ fulloffset:
             displace_learnable_offset: true
             random_offset_init: 0
             early_predictor: true
-            loss_early: labeled
+            loss_early: visible
             loss_final: labeled
             enable_offset_block: true
     dataset:
-        data: mpii
+        data: coco
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
         scale_factor: 0.25
