--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,7 +336,7 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 91
+    id: 92
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
@@ -371,19 +371,19 @@ fulloffset:
         store_map: false
     model:
         use_gn: true
-        resnet_pretrained: pretrained/resnet50_gn.pth
-        inp_shape: [192, 256] # W, H
-        out_shape: [48, 64] # W, H
-        gaussian_kernels: [2.6, 2., 1.7, 1.4] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
+        resnet_pretrained: pretrained/resnet101_gn.pth
+        inp_shape: [288, 384] # W, H
+        out_shape: [72, 96] # W, H
+        gaussian_kernels: [3.8, 2.9, 2.3, 1.7] # sigma = 0.3*((ksize-1)*0.5 - 1) + 0.8
         parse_threshold: 0.1
-        resnet: 50
+        resnet: 101
         detail:
             early_predictor_label_index: [3, 2, 1]
             disable_displace: false
             displace_learnable_offset: true
             random_offset_init: 0
             early_predictor: true
-            loss_early: visible
+            loss_early: labeled
             loss_final: labeled
             enable_offset_block: true
     dataset:
