--- a/experiments/hparams.yaml
+++ b/experiments/hparams.yaml
@@ -336,11 +336,11 @@ baycrf:
 fulloffset:
     <<: *DEFAULT
     name: offset
-    id: 96
+    id: 97
     learning_rate: 5.e-4
     lr_gamma: 0.5
     epochs: 100
-    schedule: []
+    schedule: [35, 38, 41]
     train_batch: 16
     test_batch: 16
     learnable_offset:
@@ -382,7 +382,7 @@ fulloffset:
             disable_displace: false
             displace_learnable_offset: true
             random_offset_init: 0
-            early_predictor: false
+            early_predictor: true
             loss_early: labeled
             loss_final: labeled
             enable_offset_block: false
