--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -1,4 +1,5 @@
 default: &DEFAULT
+    before_epoch: 0
     workers: 16
     debug: false
     profile: false
@@ -6,8 +7,8 @@ default: &DEFAULT
     fast_pass_valid: 0
     handle_sig: true
     evaluate: false
-    checkpoint: 'checkpoint/{exp}/{id}'
-    resume: null
+    checkpoint_dir: 'checkpoint/{exp_name}/{exp_id}'
+    resume: false
     vis: false
     debug_nan: false
     valid_interval: 0
@@ -31,7 +32,7 @@ debug: &DEBUG
 
 evaluate: &EVALUATE
     <<: *DEFAULT
-    resume: 'checkpoint/{exp}/{id}'
+    resume: true
     evaluate: true
 
 fast: &FAST
@@ -43,11 +44,11 @@ fast: &FAST
 
 fastresume:
     <<: *FAST
-    resume: 'checkpoint/{exp}/{id}'
+    resume: true
 
 resume: &RESUME
     <<: *DEFAULT
-    resume: 'checkpoint/{exp}/{id}'
+    resume: true
 
 looseresume:
     <<: *RESUME
@@ -59,6 +60,6 @@ fasteval:
     <<: *DEFAULT
     fast_pass_train: 3
     fast_pass_valid: 3
-    resume: 'checkpoint/{exp}/{id}'
+    resume: true
     evaluate: true
     check: true
