--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -2,7 +2,7 @@ exp:
     name: offset
     id: 98
 
-iter:
+train:
     learning_rate: 5.e-4
     lr_gamma: 0.5
     num_epoch: 100
@@ -32,6 +32,7 @@ log:
     # TODO: log more:
     # - Unstable network parapmeter changes
     # - Intermediate result and visualization
+    tb_domain: offset
     move_average_cycle: 500
     offset_save_interval: 1000
 
