--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -1,6 +1,6 @@
 exp:
     name: offset
-    id: 98
+    id: 99
 
 train:
     learning_rate: 5.e-4
@@ -18,8 +18,6 @@ train:
         lr_decay_step: 100000 # 15 * 6543
         bn_momentum: 0.1
         momentum: 0.0
-        interpolate_gaussian_sigma_decay_step: 330000
-        interpolate_gaussian_sigma_decay_rate: 0.66
 
 eval:
     parse_threshold: 0.1
@@ -50,7 +48,6 @@ model:
         early_predictor_label_index: [3, 2, 1]
         disable_displace: false
         displace_learnable_offset: true
-        random_offset_init: 0
         early_predictor: true
         loss_early: labeled
         loss_final: labeled
@@ -58,15 +55,11 @@ model:
         first_esp_only: true
 
     learnable_offset:
-        interpolate_kernel_type: bilinear
-        interpolate_gaussian_sigma: 0.5
         expand_chan_ratio: [4, 4, 4, 2, 2, 2, 0.5, 0.5, 0.5, 0.5, 0.5, 0.25, 0.25]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
-        dconv_for_LO_stride: 1
-        regress_offset: false
-        grad_inside_only: true
+        regress_offset: true
         use_in_predictor: false
         enable_atten: true
         enable_mask: false
