--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -1,6 +1,6 @@
 exp:
     name: simpleoff
-    id: 3
+    id: 4
 
 train:
     learning_rate: 5.e-4
@@ -54,7 +54,7 @@ model:
         reuse_offset: false
         half_reversed_offset: false
         regress_offset: false
-        transform_offset: true
+        transform_offset: false
         enable_atten: true
         enable_mask: false
 
