--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -1,6 +1,6 @@
 exp:
     name: simpleoff
-    id: 4
+    id: 5
 
 train:
     learning_rate: 5.e-4
@@ -10,10 +10,12 @@ train:
     train_batch: 16
     test_batch: 16
     weight_decay: 0
+    gradual_size: false
     offset:
         train_min_step: 200
         lr: 1.e-3
         lr_regressor: 1.e-3
+        lr_transformer: 5.e-4
         lr_gamma: 0.3
         lr_decay_step: 100000 # 15 * 6543
         bn_momentum: 0.1
@@ -54,7 +56,7 @@ model:
         reuse_offset: false
         half_reversed_offset: false
         regress_offset: false
-        transform_offset: false
+        transform_offset: true
         enable_atten: true
         enable_mask: false
 
