[Exp] simpleoff_5/Jan07_224240:
- Fix bug of transform_maps
- Transformed image filled with rgb 0 instead of mean 0
- Disable blur_sigma

--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -48,6 +48,7 @@ model:
         disable_displace: false
         displace_learnable_offset: true
         loss_final: labeled
+        loss_feature: true
         enable_offset_block: true
 
     learnable_offset:
