--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -4,7 +4,7 @@ exp:
 
 train:
     learning_rate: 5.e-4
-    lr_gamma: 0.5
+    gamma_lr: 0.5
     num_epoch: 100
     schedule: []
     train_batch: 16
@@ -16,9 +16,10 @@ train:
         lr: 1.e-3
         lr_regressor: 1.e-3
         lr_transformer: 5.e-4
-        lr_gamma: 0.3
-        lr_decay_step: 100000 # 15 * 6543
-        bn_momentum: 0.1
+        lr_dpool_sigma: 1.e-3
+        gamma_lr: 0.3
+        decay_step_lr: 100000 # 15 * 6543
+        momentum_bn: 0.1
         momentum: 0.0
 
 eval:
@@ -35,6 +36,7 @@ log:
     # - Intermediate result and visualization
     tb_domain: offset
     move_average_cycle: 500
+    sigma_change_average_cycle: 100
     offset_save_interval: 1000
     tb_vis_interval: 3000
     tb_gradient_interval: 3000
