--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -1,6 +1,6 @@
 exp:
     name: simpleoff
-    id: 5
+    id: 6
 
 train:
     learning_rate: 5.e-4
@@ -13,10 +13,11 @@ train:
     gradual_size: false
     offset:
         train_min_step: 3000
+        always_train_block: true
         lr: 1.e-3
         lr_regressor: 1.e-3
         lr_transformer: 5.e-4
-        lr_dpool_sigma: 1.e-3
+        lr_dpool_sigma: 5.e-4
         gamma_lr: 0.3
         decay_step_lr: 100000 # 15 * 6543
         momentum_bn: 0.1
