--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -21,6 +21,7 @@ train:
         lr_dpool_sigma: 5.e-3
         gamma_lr: 0.3
         decay_step_lr: 100000 # 15 * 6543
+        grow_transformer_step: 8925
         momentum_bn: 0.1
         momentum: 0.0
 
@@ -63,7 +64,7 @@ model:
         reuse_offset: false
         half_reversed_offset: false
         regress_offset: false
-        transform_offset: false
+        transform_offset: true
         enable_atten: true
         enable_mask: false
         dpool_size: 15
