--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -1,6 +1,6 @@
 exp:
     name: offset
-    id: 99
+    id: 100
 
 train:
     learning_rate: 5.e-4
@@ -52,21 +52,21 @@ model:
         loss_early: labeled
         loss_final: labeled
         enable_offset_block: true
-        first_esp_only: true
+        first_esp_only: false
 
     learnable_offset:
-        expand_chan_ratio: [4, 4, 4, 2, 2, 2, 0.5, 0.5, 0.5, 0.5, 0.5, 0.25, 0.25]
+        expand_chan_ratio: [2, 2, 2, 1, 1, 1, 0.5, 0.5, 0.5, 0.5, 0.5, 0.25, 0.25]
         bind_chan: 1
         reuse_offset: false
         half_reversed_offset: false
-        regress_offset: true
+        regress_offset: false
         use_in_predictor: false
         enable_atten: true
         enable_mask: false
 
 dataset:
     profile: coco
-    subset: 0.3
+    subset: null
     coco:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
