--- a/experiments/main/hparams.yaml
+++ b/experiments/main/hparams.yaml
@@ -66,7 +66,7 @@ model:
 
 dataset:
     profile: coco
-    subset: null
+    subset: 0.3
     coco:
         mean_std_file: mean_std.pth
         ext_border: [0.1, 0.15]
