--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -51,6 +51,7 @@ model:
     gaussian_kernel: 1.4
     loss_featstab: false
     loss_featstab_cof: 1
+    loss_dpool_cof: 1.e-3
     detail:
         disable_displace: false
         learnable_offset: true
