Profiling and improvement
* Profilers: pytracing, pytorch profilers
* Improve summarizing
* Improve performance (delay cuda synchronize, transformer)

--- a/experiments/config.yaml
+++ b/experiments/config.yaml
@@ -23,6 +23,7 @@ default: &DEFAULT
     use_tensorboard: true
     train_drop_last: false
     detect_anomaly: false
+    nvprof: false
 
 profile: &PROFILE
     <<: *DEFAULT
