--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -21,7 +21,7 @@ train:
         lr_dpool_sigma: 5.e-3
         gamma_lr: 0.3
         decay_step_lr: 100000 # 15 * 6543
-        grow_transformer_step: 8925
+        transformer_grow_iter: 8925
         momentum_bn: 0.1
         momentum: 0.0
 
@@ -37,12 +37,9 @@ log:
     # TODO: log more:
     # - Unstable network parapmeter changes
     # - Intermediate result and visualization
-    tb_domain: offset
     move_average_cycle: 500
     sigma_change_average_cycle: 500
     offset_save_interval: 1000
-    tb_vis_interval: 3000
-    tb_gradient_interval: 3000
 
 model:
     use_gn: true
