--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -62,15 +62,15 @@ model:
         reuse_offset: false
         half_reversed_offset: false
         regress_offset: false
-        enable_atten: true
-        enable_post_atten: false
-        atten_space_norm: false
+        enable_atten: false
+        enable_post_atten: true
+        atten_space_norm: true
         dpool_size: 15
         transformer:
             enable: true
             independent: false
             bottleneck: 32
-            absolute_regressor: true
+            absolute_regressor: false
 
 dataset:
     profile: coco
