--- a/experiments/simple/hparams.yaml
+++ b/experiments/simple/hparams.yaml
@@ -46,7 +46,7 @@ model:
     inp_shape: [192, 256] # W, H
     out_shape: [48, 64] # W, H
     gaussian_kernel: 1.4
-    regress_predict: true
+    regress_predict: false
     loss_featstab: false
     loss_featstab_cof: 1
     loss_dpool_cof: 1.e-6
@@ -70,8 +70,8 @@ model:
         transformer:
             enable: true
             independent: false
-            bottleneck: 32
-            absolute_regressor: false
+            bottleneck: null
+            absolute_regressor: true
 
 dataset:
     profile: coco
